--- a/ref/style.css
+++ b/ref/style.css
@@ -259,18 +259,19 @@ button.push:active {
 ==============================================================*/
 
 div.advantage {
-    width: 75%;
+    width: 100%;
     display: flex;
     flex-direction: column;
-    margin: 3rem 12.5%;
+    margin: 0 0 2rem;
+    padding: 3rem 12.5%;
+    background-color: #cec;
 }
 
 @media screen and (max-width: 720px) {
     div.advantage {
-        width: 95%;
         display: flex;
         flex-direction: column;
-        margin: 3rem 2.5%;
+        padding: 3rem 1%;
     }
 }
 
